--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
+  "description": "Multi-user WhatsApp Bot with Session ID and Plugins",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
-    "whatsapp-web.js": "^1.15.0",
-    "qrcode-terminal": "^0.12.0"
+    "@whiskeysockets/baileys": "^4.0.0",
+    "express": "^4.18.2",
+    "pino": "^8.11.0",
+    "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
